ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-workload
  labels:
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
    mesh: demo-mesh
    gateway: ingress-gw
